--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,7 +34,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tl_title"
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
+        android:layout_height="35dp"
         app:tabTextColor="#ffffff"
         app:tabGravity="fill"
         app:tabMode="fixed"
