--- a/app/src/main/res/layout/cigarette_item.xml
+++ b/app/src/main/res/layout/cigarette_item.xml
@@ -30,19 +30,19 @@
                     android:layout_height="0dp"
                     android:layout_weight=".5"
                     android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight=".7"
-                        android:layout_height="match_parent"
-                        android:layout_margin="5dp"
-                        android:text="Price per item: Rs "/>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:id="@+id/price"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".3"
-                        android:layout_margin="5dp"
-                        />
+                    <!--<TextView-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_weight=".7"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_margin="5dp"-->
+                        <!--android:text="Price per item: Rs "/>-->
+                    <!--<TextView-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:id="@+id/price"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_weight=".3"-->
+                        <!--android:layout_margin="5dp"-->
+                        <!--/>-->
                 </LinearLayout>
             </LinearLayout>
 
@@ -56,12 +56,12 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <Spinner
-                        android:id="@+id/planets_spinner"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:layout_weight=".5" />
+                    <!--<Spinner-->
+                        <!--android:id="@+id/planets_spinner"-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_margin="10dp"-->
+                        <!--android:layout_weight=".5" />-->
 
                     <Button
                         android:id="@+id/button14"
