--- a/app/src/main/res/layout/product_list_dialog_adapter.xml
+++ b/app/src/main/res/layout/product_list_dialog_adapter.xml
@@ -11,22 +11,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ListView
-            android:id="@+id/lv"
+            android:id="@+id/lv_dialog"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".9"
+            android:layout_height="match_parent"
+            android:layout_weight=".6"
             android:descendantFocusability="beforeDescendants"
             android:divider="@null"
             android:dividerHeight="0dp"
             />
-
-        <Button
-            android:id="@+id/cart"
-            android:theme="@style/MyButton"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".1"
-            android:text="Go to Cart" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
