--- a/app/src/main/res/layout/recent_order_item.xml
+++ b/app/src/main/res/layout/recent_order_item.xml
@@ -17,14 +17,14 @@
             android:layout_weight=".7"
             android:layout_margin="5dp"
             android:id="@+id/recent"/>
-<Button
-    android:layout_width="0dp"
-    android:layout_weight=".3"
-    android:layout_margin="5dp"
-    android:text="Order Again"
-    android:layout_height="match_parent"
-    android:theme="@style/MyButton"
-    android:id="@+id/recent_button"/>
+<!--<Button-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_weight=".3"-->
+    <!--android:layout_margin="5dp"-->
+    <!--android:text="Order Again"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:theme="@style/MyButton"-->
+    <!--android:id="@+id/recent_button"/>-->
 
     </LinearLayout>
 </RelativeLayout>
