--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:id="@+id/layout"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"
+        >
 
         <EditText
             android:id="@+id/editText"
@@ -23,8 +25,8 @@
             android:layout_marginLeft="88dp"
             android:layout_marginTop="132dp"
             android:ems="10"
-            android:inputType="number"
             android:hint="Phone Number"
+            android:inputType="number"
             tools:layout_editor_absoluteX="84dp"
             tools:layout_editor_absoluteY="176dp" />
 
@@ -39,8 +41,8 @@
             android:layout_marginLeft="90dp"
             android:layout_marginTop="203dp"
             android:ems="10"
-            android:inputType="textPassword"
             android:hint="Password"
+            android:inputType="textPassword"
             tools:layout_editor_absoluteX="84dp"
             tools:layout_editor_absoluteY="265dp" />
 
@@ -53,10 +55,23 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="136dp"
             android:layout_marginLeft="136dp"
-            android:theme="@style/MyButton"
             android:layout_marginBottom="189dp"
             android:text="Login"
+            android:theme="@style/MyButton"
             tools:layout_editor_absoluteX="148dp"
             tools:layout_editor_absoluteY="368dp" />
+
+        <Button
+            android:id="@+id/button16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="96dp"
+            android:layout_marginLeft="96dp"
+            android:theme="@style/MyButton"
+            android:layout_marginBottom="126dp"
+            android:text="Create an account" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
