--- a/app/src/main/res/layout/activity_sign_up4.xml
+++ b/app/src/main/res/layout/activity_sign_up4.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="26dp">
 
 
         <EditText
@@ -32,9 +33,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:theme="@style/MyButton"
-            android:layout_marginBottom="179dp"
-            android:text="Next" />
+            android:layout_marginBottom="107dp"
+            android:text="Next"
+            android:theme="@style/MyButton" />
 
         <EditText
             android:id="@+id/editText8"
@@ -48,5 +49,27 @@
             android:ems="10"
             android:hint="Create a Password"
             android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="78dp"
+            android:layout_marginRight="78dp"
+            android:layout_marginBottom="179dp"
+            android:text="Terms and Conditions" />
+
+        <CheckBox
+            android:id="@+id/radioButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/editText7"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="42dp"
+            android:layout_marginBottom="208dp"
+            android:text="I accept all the terms and conditions" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
