--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,8 +10,8 @@
         android:layout_width="368dp"
         android:layout_height="491dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="4dp">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -23,7 +23,7 @@
             android:layout_marginStart="146dp"
             android:layout_marginLeft="146dp"
             android:layout_marginTop="93dp"
-            android:src="@drawable/dp" />
+            android:src="@mipmap/io" />
 
         <TextView
             android:id="@+id/textView"
@@ -31,76 +31,48 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:textColor="#000000"
             android:layout_alignParentRight="true"
             android:layout_marginTop="214dp"
             android:layout_marginEnd="91dp"
             android:layout_marginRight="91dp"
-            android:text="Hello, Welcome to Baabae." />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="214dp"
-            android:text=", Please find below some important details regarding you." />
+            android:text="Hello, Welcome to Baabae."
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
-            android:textColor="#000000"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="7dp"
-            android:text="Devansh Bansal" />
+            android:text="Devansh Bansal"
+            android:textColor="#000000" />
 
-        <TextView
-            android:id="@+id/textView5"
+        <Button
+            android:id="@+id/button13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="48dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginBottom="146dp"
-            android:textColor="#000000"
-            android:text="Cigarettes Smoked" />
+            android:layout_marginStart="121dp"
+            android:layout_marginLeft="121dp"
+            android:layout_marginBottom="190dp"
+            android:text="Share the app"
+            android:theme="@style/MyButton" />
 
-        <TextView
-            android:id="@+id/textView6"
+        <Button
+            android:id="@+id/button15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView5"
-            android:textColor="#000000"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="-7dp"
-            android:layout_marginBottom="91dp"
-            android:text="Money Saved (in Rs)" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/imageView"
-            android:layout_alignBottom="@+id/textView5"
-            android:layout_marginEnd="-54dp"
-            android:layout_marginBottom="2dp"
-            android:text="0" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_alignStart="@+id/textView7"
-            android:layout_alignBottom="@+id/textView6"
-            android:text="0" />
+            android:layout_marginEnd="134dp"
+            android:layout_marginRight="134dp"
+            android:layout_marginBottom="128dp"
+            android:text="HELP"
+            android:theme="@style/MyButton" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
