--- a/app/src/main/res/layout/recent_order_item.xml
+++ b/app/src/main/res/layout/recent_order_item.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
@@ -17,6 +19,7 @@
             android:layout_weight=".7"
             android:layout_margin="5dp"
             android:id="@+id/recent"/>
+
 <!--<Button-->
     <!--android:layout_width="0dp"-->
     <!--android:layout_weight=".3"-->
@@ -27,5 +30,6 @@
     <!--android:id="@+id/recent_button"/>-->
 
     </LinearLayout>
+</ScrollView>
 </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
