--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,13 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.bansal.baabae.HomeActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/share"
         android:orderInCategory="100"
         android:title="Share"
         app:showAsAction="never" />
 
-    <item
-        android:orderInCategory="100"
-        android:title="Logout"
-        app:showAsAction="never" />
 </menu>
