--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:id="@+id/layout"
         tools:layout_editor_absoluteX="0dp"
+        android:background="@mipmap/bg"
         tools:layout_editor_absoluteY="0dp"
         >
 
